RESOLVED FIXED13636
<OBJECT> tags seem mistakenly included in the document's applet collection
https://bugs.webkit.org/show_bug.cgi?id=13636
Summary <OBJECT> tags seem mistakenly included in the document's applet collection
Brady Eidson
Reported 2007-05-09 00:49:42 PDT
Both in Safari 2.0 and ToT, it seems OBJECT tags were incorrectly included in a page's applet collection. This prevented (and continues to prevent) back/forward caching of certain pages. Visit the above url in Safari/ToT WebKit and in Firefox run "javascript:alert(document.applets[0].outerHTML);" from the location field Firefox has 0, Safari/ToT have 1 - view the page source to see the big glaring OBJECT Since Firefox correctly reports 0, it's hard to believe we ever did this for compatibility with FFX - however, I have not tried WinIE
Attachments
Brady Eidson
Comment 1 2007-05-09 00:51:35 PDT
Correction - since FFX doesn't support outerhtml, amend the javascript to be "javascript:alert(document.applets[0]);" It gives you back an undefined collection, whereas Safari hands back a collection (with 1 member)
Brady Eidson
Comment 2 2007-05-09 00:52:48 PDT
ummm check that - I meant a null ELEMENT, and Safari gives back an HTMLObjectElement
Brady Eidson
Comment 3 2007-05-09 01:15:25 PDT
Brady Eidson
Comment 4 2007-05-09 10:07:56 PDT
Brady Eidson
Comment 5 2007-05-10 02:18:08 PDT
Landed in r21359
Eric Seidel (no email)
Comment 6 2007-05-10 02:21:02 PDT
Note You need to log in before you can comment on or make changes to this bug.