WebCore/html/HTMLObjectElement.h
@@ -117,6 +117,8 @@ public:
     
     bool isDocNamedItem() const { return m_docNamedItem; }
 
+    bool containsJavaApplet() const;
+    
 #if ENABLE(SVG)
     SVGDocument* getSVGDocument(ExceptionCode&) const;
 #endif
